--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,24 +1,35 @@
 .reviews {
   position: relative;
-  padding-bottom: 16px;
-  padding-top: 39px;
   text-align: center;
   background-color: #ffffff;
   color: #000000;
-  background-image: url("../../img/reviews-sketch-desktop@1x.png"),
-    url("../../img/reviews-bg-watercolor@1x.png");
-  background-repeat: no-repeat,
-    no-repeat;
-  background-position: 101.5% 94px,
-    109px 75px;
-  background-size: auto,
-    1259px;
+  background-image: url("../../img/reviews-bg-watercolor@1x.png");
+  background-repeat: no-repeat;
+  background-position: 109px 75px;
+  background-size: 1259px;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../../img/reviews-sketch-desktop@2x.png"),
       url("../../img/reviews-bg-watercolor@2x.png");
     background-size: 535px 318px,
       1259px;
+  }
+}
+
+.reviews__bg-wrapper {
+  max-width: 1366px;
+  margin: 0 auto;
+  padding-bottom: 16px;
+  padding-top: 39px;
+
+  background-image: url("../../img/reviews-sketch-desktop@1x.png");
+  background-repeat: no-repeat;
+  background-position: 101.5% 94px;
+  background-size: auto;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../../img/reviews-sketch-desktop@2x.png");
+    background-size: 535px 318px;
   }
 }
 
@@ -237,6 +248,16 @@
     padding-bottom: 30px;
   }
 
+  .reviews img {
+    margin-right: 20px;
+    transform: translateY(0);
+  }
+
+  .reviews__first-paragraph,
+  .reviews__second-paragraph {
+    padding-right: 0;
+  }
+
   .reviews__footer-wrapper {
     width: 40%;
   }
@@ -249,16 +270,28 @@
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 33px;
-    background-image: url("../../img/reviews-sketch-mobile@1x.png"),
-      none;
+    background-image: url("../img/reviews-sketch-mobile@1x.png");
     background-repeat: no-repeat;
     background-position: 100% 566px;
+    background-size: 288px 261px;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../../img/reviews-sketch-mobile@2x.png"),
-        none;
-      background-size: 288px 261px;
+      background-image: url("../img/reviews-sketch-mobile@2x.png");
     }
+  }
+
+  .reviews__bg-wrapper {
+    padding-bottom: 0;
+    padding-top: 0;
+    background-image: none;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: none;
+    }
+  }
+
+  .reviews__list {
+    padding: 0;
   }
 
   .reviews__item {
