--- a/source/sass/blocks/want-go.scss
+++ b/source/sass/blocks/want-go.scss
@@ -1,21 +1,29 @@
 .want-go {
   position: relative;
-  padding-top: 160px;
-  padding-bottom: 130px;
   background-color: #ffffff;
   color: #000000;
-  background-image: url("../../img/backpack-desktop@1x.png"),
-    url("../../img/girl-flag-desktop@1x.jpg");
-  background-repeat: no-repeat,
-    no-repeat;
-  background-position: -73px 30%,
-    right -49px;
+  background-image: url("../../img/backpack-desktop@1x.png");
+  background-repeat: no-repeat;
+  background-position: -73px 86px;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../../img/backpack-desktop@2x.png"),
-      url("../../img/girl-flag-desktop@2x.jpg");
-    background-size: 220px,
-      818px;
+    background-image: url("../../img/backpack-desktop@2x.png");
+    background-size: 220px;
+  }
+}
+
+.want-go__bg-wrapper {
+  max-width: 1366px;
+  padding-top: 160px;
+  padding-bottom: 130px;
+  margin: 0 auto;
+  background-image: url("../../img/girl-flag-desktop@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: right -49px;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../../img/girl-flag-desktop@2x.jpg");
+    background-size: 818px;
   }
 }
 
@@ -111,8 +119,12 @@
 }
 
 @media (max-width: $tab-width) {
-  .want-go {
+  .want-go__wrapper {
     padding-left: 50px;
+  }
+
+  .want-go__bg-wrapper {
+    background-position: 360px -49px;
   }
 
   .want-go__error-message {
@@ -123,23 +135,35 @@
 @media (max-width: $mob-width) {
   .want-go {
     padding-top: 49px;
-    padding-bottom: 308px;
-    padding-left: 17px;
-    padding-right: 17px;
-    background-image: url("../../img/backpack-mobile@1x.png"),
-      url("../../img/girl-flag-bg-mobile@1x.jpg");
-    background-repeat: no-repeat,
-      no-repeat;
-    background-position: left 1px,
-      50% 340px;
+    padding-left: 0;
+    padding-right: 0;
+    background-image: url("../../img/backpack-mobile@1x.png");
+    background-repeat: no-repeat;
+    background-position: left 1px;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../../img/backpack-mobile@2x.png"),
-        url("../../img/girl-flag-bg-mobile@2x.jpg");
-      background-repeat: no-repeat,
-        no-repeat;
-      background-size: 103px,
-        contain;
+      background-image: url("../../img/backpack-mobile@2x.png");
+      background-repeat: no-repeat;
+      background-size: 103px;
+    }
+  }
+
+  .want-go__wrapper {
+    padding-left: 17px;
+    padding-right: 17px;
+  }
+
+  .want-go__bg-wrapper {
+    padding-top: 0;
+    padding-bottom: 308px;
+    background-image: url("../../img/girl-flag-bg-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% 291px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../../img/girl-flag-bg-mobile@2x.jpg");
+      background-repeat: no-repeat;
+      background-size: contain;
     }
   }
 
