--- a/source/sass/blocks/details.scss
+++ b/source/sass/blocks/details.scss
@@ -2,13 +2,13 @@
   background-color: #ffffff;
   color: #000000;
   text-align: center;
-  background-image: url("../../img/details-bg-desktop@1x.jpg");
+  background-image: url("../img/details-bg-desktop@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% -74px;
   background-size: cover;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../../img/details-bg-desktop@2x.jpg");
+    background-image: url("../img/details-bg-desktop@2x.jpg");
   }
 }
 
@@ -17,12 +17,12 @@
   margin: 0 auto;
   padding-top: 16px;
   padding-bottom: 75px;
-  background-image: url("../../img/map-desktop@1x.png");
+  background-image: url("../img/map-desktop@1x.png");
   background-repeat: no-repeat;
   background-position: right 22px;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../../img/map-desktop@2x.png");
+    background-image: url("../img/map-desktop@2x.png");
     background-size: 705px;
   }
 }
@@ -57,7 +57,7 @@
   &::before {
     position: absolute;
     content: "";
-    background: url("../../img/marker-mobile@1x.png") no-repeat 0 0;
+    background: url("../img/marker-mobile@1x.png") no-repeat 0 0;
     width: 12px;
     height: 18px;
     top: 0;
@@ -92,7 +92,7 @@
 .details__choose-city button {
   font-size: 0;
   line-height: 0;
-  background-image: url("../../img/gps-marker-mobile@1x.png");
+  background-image: url("../img/gps-marker-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: 0 0;
   background-color: transparent;
@@ -318,6 +318,10 @@
 @media (max-width: $tab-width) {
   .details {
     background-image: none;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: none;
+    }
   }
 
   .details__form-wrapper {
@@ -348,22 +352,16 @@
     padding-left: 0;
     padding-top: 33px;
     padding-bottom: 63px;
-    background-image: none;
-
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: none;
-    }
   }
 
   .details__bg-wrapper {
     padding: 0;
-    background-image: url("../../img/map-desktop@1x.png");
+    background-image: url("../img/map-desktop@1x.png");
     background-position: 66% 632px;
     background-size: 655px;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../../img/map-desktop@2x.png");
+      background-image: url("../img/map-desktop@2x.png");
     }
   }
 
