--- a/source/sass/blocks/modal-order-callback.scss
+++ b/source/sass/blocks/modal-order-callback.scss
@@ -3,7 +3,7 @@
   position: relative;
   margin: 0 auto;
   padding-top: 56px;
-  padding-bottom: 42px;
+  padding-bottom: 40px;
   padding-left: 48px;
   padding-right: 72px;
   background-color: #ffffff;
@@ -106,7 +106,8 @@
 }
 
 .modal-order-callback__checkbox-label {
-  display: block;
+  position: relative;
+  display: inline-block;
   margin-left: 84px;
   margin-right: 20px;
   font-family: "Fira Sans", "Arial", sans-serif;
@@ -116,28 +117,47 @@
   opacity: 0.74;
   cursor: pointer;
   text-align: left;
+
+  &::before {
+    position: absolute;
+    content: "";
+    background-image: url("../img/checkbox.svg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    top: 1px;
+    left: -24px;
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+  }
+
+  &::after {
+    display: none;
+    position: absolute;
+    content: "";
+    left: -21px;
+    top: 4px;
+    width: 7px;
+    height: 5px;
+    border-radius: 1px;
+    border-left: 3px solid #ffd701;
+    border-bottom: 3px solid #ffd701;
+    transform: rotate(-45deg);
+  }
 }
 
-.modal-order-callback__checkbox-label input {
+input[type="checkbox"]:checked,
+input[type="checkbox"]:not(:checked) {
   position: absolute;
   left: -9999px;
 
-  &:checked + .modal-order-callback__custom-checkbox {
-    background-color: #fffd00;
+  &:checked + label::after {
+    display: block;
   }
 
-  &:focus + .modal-order-callback__custom-checkbox {
+  &:focus + label::before {
     border: 1px solid blue;
   }
-}
-
-.modal-order-callback__custom-checkbox {
-  position: absolute;
-  margin-left: -24px;
-  background: url("../../img/checkbox.svg") no-repeat 50% 50%;
-  width: 16px;
-  height: 16px;
-  cursor: pointer;
 }
 
 .modal-order-callback__close-button {
@@ -214,16 +234,15 @@
   }
 
   .modal-order-callback__form label {
+    max-width: 470px;
     position: relative;
     margin: 0 auto;
-    padding-left: 24px;
-    width: 60%;
+    padding-left: 26px;
     text-align: center;
   }
 
-  .modal-order-callback__custom-checkbox {
-    position: absolute;
-    margin-left: -24px;
+  .modal-order-callback__checkbox-label::before {
+    left: 4px;
     width: 16px;
     height: 16px;
     cursor: pointer;
@@ -247,7 +266,6 @@
     line-height: 22px;
     text-align: center;
     box-sizing: border-box;
-    //TODO: сомнительно отцентровал, текст не совпадает по макету.
   }
 
   .modal-order-callback__close-button {
@@ -269,6 +287,7 @@
   }
 
   .modal-order-callback__form label {
+    max-width: 100%;
     width: 85%;
     text-align: left;
   }
