--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,4 +1,5 @@
 .intro-header-wrapper {
+  flex-grow: 1;
   background-image: url("../../img/background-top-desktop@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
