--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,18 +1,26 @@
 .page-footer {
+  flex-grow: 0;
   padding-top: 24px;
+  padding-bottom: 20px;
   padding-right: 114px;
   padding-left: 110px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   border-top: 1px solid #e3e3e3;
   background-color: #ffffff;
   color: #000000;
 }
 
+.page-footer__wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .page-footer__logo {
+  display: block;
   margin-right: 30px;
   cursor: pointer;
+  font-size: 0;
+  line-height: 1;
 
   &:hover {
     opacity: 0.7;
@@ -24,6 +32,7 @@
 }
 
 .page-footer img {
+  display: block;
   position: relative;
   width: 85px;
   height: 27px;
@@ -55,6 +64,7 @@
 .page-footer__social-list a {
   display: inline-block;
   font-size: 0;
+  line-height: 1;
   cursor: pointer;
 }
 
@@ -84,6 +94,9 @@
     padding-top: 34px;
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .page-footer__wrapper {
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
@@ -91,11 +104,11 @@
 
   .page-footer__logo {
     margin-right: 0;
+    margin-bottom: 22px;
   }
 
   .page-footer img {
     margin-right: 0;
-    margin-bottom: 13px;
     width: 99px;
     height: 31px;
   }
