--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "base.scss";
 @import "visually-hidden.scss";
 @import "variables.scss";
+@import "./blocks/main.scss";
 @import "./blocks/container.scss";
 @import "./blocks/btn.scss";
 @import "./blocks/page-header.scss";
