--- a/source/sass/blocks/how-go.scss
+++ b/source/sass/blocks/how-go.scss
@@ -247,7 +247,8 @@
 
   .how-go__wrapper {
     padding-left: 0;
-    max-width: 525px;
+    max-width: 290px;
+    margin: 0 auto;
   }
 
   .how-go h2 {
