--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -38,22 +38,35 @@
   src: url("../fonts/Raleway-Bold.woff2") format("woff2"), url("../fonts/Raleway-Bold.woff") format("woff");
 }
 
-html {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
   height: 100%;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
   background-color: #ffffff;
   color: #000000;
   font-family: "Fira Sans", "Arial", sans-serif;
   font-size: 15px;
   font-weight: normal;
   line-height: 26px;
+}
+
+#wrap {
+  margin: 0;
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
+.content {
+  display: table-row;
+  height: 100%;
 }
 
 a {
