--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,6 +1,5 @@
 .intro-header-wrapper {
-  flex-grow: 1;
-  background-image: url("../../img/background-top-desktop@1x.jpg");
+  background-image: url("../img/background-top-desktop@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
@@ -9,19 +8,19 @@
   color: #000000;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../../img/background-top-desktop@2x.jpg");
+    background-image: url("../img/background-top-desktop@2x.jpg");
   }
 }
 
 .intro {
   padding-top: 439px;
   padding-bottom: 200px;
-  background: url("../../img/girl-desktop@1x.png") 50% -100px no-repeat,
-    url("../../img/israel-desktop@1x.png") 50% 60px no-repeat;
+  background: url("../img/girl-desktop@1x.png") 50% -100px no-repeat,
+    url("../img/israel-desktop@1x.png") 50% 60px no-repeat;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background: url("../../img/girl-desktop@2x.png") 50% -100px no-repeat,
-      url("../../img/israel-desktop@2x.png") 50% 60px no-repeat;
+    background: url("../img/girl-desktop@2x.png") 50% -100px no-repeat,
+      url("../img/israel-desktop@2x.png") 50% 60px no-repeat;
     background-size: 1366px 906px,
       1018px 340px;
   }
@@ -45,39 +44,39 @@
   display: block;
   font-size: 0;
   line-height: 0;
-  background: url("../../img/hint-scroll-down-desktop@1x.png") no-repeat 50% 50%;
+  background: url("../img/hint-scroll-down-desktop@1x.png") no-repeat 50% 50%;
   height: 132px;
   width: 76px;
   cursor: pointer;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background: url("../../img/hint-scroll-down-desktop@2x.png") no-repeat 50% 50%;
+    background: url("../img/hint-scroll-down-desktop@2x.png") no-repeat 50% 50%;
     background-size: 76px 132px;
   }
 }
 
 @media (max-width: $mob-width) {
   .intro-header-wrapper {
-    background-image: url("../../img/background-top-mobile@1x.png");
+    background-image: url("../img/background-top-mobile@1x.png");
     background-repeat: no-repeat;
     background-position: 50% 32px;
     background-size: cover;
     height: 587px;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../../img/background-top-mobile@2x.png");
+      background-image: url("../img/background-top-mobile@2x.png");
     }
   }
 
   .intro {
     padding-top: 239px;
     padding-bottom: 150px;
-    background: url("../../img/girl-mobile@1x.png") 50% -64px no-repeat,
-      url("../../img/israel-mobile@1x.png") 48% 72px no-repeat;
+    background: url("../img/girl-mobile@1x.png") 50% -64px no-repeat,
+      url("../img/israel-mobile@1x.png") 48% 72px no-repeat;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background: url("../../img/girl-mobile@2x.png") 50% -63px no-repeat,
-        url("../../img/israel-mobile@2x.png") 52% 72px no-repeat;
+      background: url("../img/girl-mobile@2x.png") 50% -63px no-repeat,
+        url("../img/israel-mobile@2x.png") 52% 72px no-repeat;
       background-size: 320px 602px,
         347px 122px;
     }
