--- a/source/sass/blocks/live-israel.scss
+++ b/source/sass/blocks/live-israel.scss
@@ -42,7 +42,7 @@
   position: relative;
   z-index: 10;
   padding: 0;
-  padding-right: 20px;
+  padding-right: 19px;
   margin: 0 auto;
   margin-bottom: 31px;
   font-family: "Fira Sans", "Arial", sans-serif;
@@ -50,7 +50,7 @@
   line-height: 29px;
   color: #484848;
   opacity: 0.87;
-  width: 720px;
+  max-width: 721px;
   text-align: right;
   letter-spacing: -0.005em;
 }
@@ -248,6 +248,8 @@
     padding-right: 16px;
     padding-bottom: 79px;
     padding-top: 30px;
+    max-width: 290px;
+    margin: 0 auto;
     background: none;
     overflow: hidden;
 
