--- a/source/sass/blocks/modal-order-callback.scss
+++ b/source/sass/blocks/modal-order-callback.scss
@@ -162,7 +162,7 @@ input[type="checkbox"]:not(:checked) {
 
 .modal-order-callback__close-button {
   position: absolute;
-  background: url("../../img/close-button.svg") no-repeat 50% 50%;
+  background: url("../img/close-button.svg") no-repeat 50% 50%;
   width: 18px;
   height: 18px;
   top: 32px;
