--- a/source/sass/blocks/modal-success.scss
+++ b/source/sass/blocks/modal-success.scss
@@ -17,7 +17,7 @@
   display: block;
   margin: 0 auto;
   margin-bottom: 28px;
-  background: url("../../img/ok-checkmark.svg") no-repeat 50% 50%;
+  background: url("../img/ok-checkmark.svg") no-repeat 50% 50%;
   width: 72px;
   height: 72px;
 }
@@ -55,7 +55,7 @@
 
 .modal-success__close-button {
   position: absolute;
-  background: url("../../img/close-button.svg") no-repeat 50% 50%;
+  background: url("../img/close-button.svg") no-repeat 50% 50%;
   width: 18px;
   height: 18px;
   top: 32px;
