--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -43,12 +43,10 @@
   padding: 0;
 }
 
-html,
 body {
-  height: 100%;
-}
-
-body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   background-color: #ffffff;
   color: #000000;
   font-family: "Fira Sans", "Arial", sans-serif;
@@ -57,16 +55,13 @@ body {
   line-height: 26px;
 }
 
-.wrap {
-  margin: 0;
-  display: table;
-  height: 100%;
+.fix-body {
+  position: fixed;
   width: 100%;
 }
 
-.content {
-  display: table-row;
-  height: 100%;
+main {
+  flex-grow: 1;
 }
 
 a {
