--- a/source/sass/blocks/details.scss
+++ b/source/sass/blocks/details.scss
@@ -245,16 +245,14 @@
   border-radius: 80px;
   box-sizing: border-box;
   appearance: none;
-}
-
-.details__form input::placeholder {
-  opacity: 0.5;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .details__name-label input {
   margin-right: 23px;
   margin-bottom: 15px;
   max-width: 250px;
+  opacity: 0.5;
 
   &:valid {
     border-color: #484848;
@@ -262,15 +260,18 @@
 
   &:focus {
     border-color: #ffd701;
+    opacity: 1;
   }
 }
 
 .details__phone-label input {
   margin-right: 24px;
   max-width: 250px;
+  opacity: 0.5;
 
   &:focus {
     border-color: #ffd701;
+    opacity: 1;
   }
 }
 
